--- a/src/customer_account_password_reset.liquid
+++ b/src/customer_account_password_reset.liquid
@@ -1,5 +1,5 @@
 {% capture email_title %}Reset your password{% endcapture %}
-{% capture email_body %}Follow this link to reset your customer account password at <a href="{{shop.url}}">{{shop.name}}</a>. If you didn't request a new password, you can safely delete this email.{% endcapture %}
+{% capture email_body %}Follow this link to reset your account password.{% endcapture %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -26,8 +26,8 @@
                   <table class="container">
                     <tr>
                       <td>
-                        <h2>{{ email_title }}</h2>
-                        <p>{{ email_body }}</p>
+                        <h2 class="text-center">{{ email_title }}</h2>
+                        <p class="text-center">{{ email_body }}</p>
                         <table class="row actions">
                           <tr>
                             <td class="actions__cell">
@@ -36,16 +36,18 @@
                                   <td class="button__cell"><a href="{{ customer.reset_password_url }}" class="button__text">Reset your password</a></td>
                                 </tr>
                               </table>
-                              {% if shop.url %}
-                                <table class="link secondary-action-cell">
-                                  <tr>
-                                    <td class="link__cell"><a href="{{ shop.url }}" class="link__text"><span class='or'>or</span> Visit our store</a></td>
-                                  </tr>
-                                </table>
-                              {% endif %}
+                            
+                            
                             </td>
                           </tr>
                         </table>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td >
+                        <p class="text-muted mt-3">
+                          If this is your account but you didn’t request a password change, you can resert your password here. If you’re having trouble, please contact our Support team.
+                        </p>
                       </td>
                     </tr>
                   </table>
