--- a/src/assets/notifications/inline-styles.css
+++ b/src/assets/notifications/inline-styles.css
@@ -3,3 +3,57 @@
  * - instead of directly overwriting style.css (Shopify's default email stylesheet)
  * we use this separate stylesheet
  */
+ p {
+  color: #000;
+}
+ table.header {
+   background-color: #000;
+   padding: 20px 0 20px;
+   margin: 0px!important;
+ }
+ table.header table.container{
+  margin-top: 5px;
+  margin-bottom: 5px;
+ }
+
+ table.content table.container {
+   margin-top:40px;
+   /*margin-bottom:40px;*/
+ }
+
+ .button__cell,.actions__cell { 
+   background: #d59b55; 
+   border-radius: 0px;
+   
+}
+.button__cell a, .actions__cell a{
+  color: white!important;
+  text-transform: uppercase;
+  font-family: Roboto;
+font-style: normal;
+font-weight: bold;
+font-size: 14px;
+line-height: 16px;
+text-align: center;
+letter-spacing: 0.1em;
+} 
+ a, a:hover, a:active, a:visited { 
+  color: #d59b55; 
+}
+.text-center {
+  text-align: center;
+}
+.text-muted {
+  font-family: Roboto;
+font-style: normal;
+font-weight: normal;
+font-size: 15px;
+line-height: 22px;
+color: #8492A6;
+}
+.mb-3 {
+  margin-bottom: 20px;
+}
+.mt-3 {
+  margin-top: 20px;
+}
