--- a/src/snippets/footer.liquid
+++ b/src/snippets/footer.liquid
@@ -5,7 +5,7 @@
         <table class="container">
           <tr>
             <td>
-              <p class="disclaimer__subtext">If you have any questions, reply to this email or contact us at <a href="mailto:{{ shop.email }}">{{ shop.email }}</a></p>
+              <p class="disclaimer__subtext">Any further questions or concerns, please look at our FAQ page where we have answered the most common questions regarding this topic or whire to us at <a href="mailto:{{ shop.email }}">{{ shop.email }}</a></p>
             </td>
           </tr>
         </table>
