Finished order edited, order update_invoice, gift card

--- a/src/assets/notifications/inline-styles.css
+++ b/src/assets/notifications/inline-styles.css
@@ -86,3 +86,29 @@ color: #8492A6;
 .action-img {
   margin-top: 30px;
 }
+
+/* Gift Card */
+.gift-card {
+  display: block;
+  position: relative;
+  color: white;
+}
+
+.gift-card__amount {
+  position: absolute;
+  bottom: 50px;
+  right: 20px;
+  font-size: 80px;
+  font-weight: 100;
+}
+
+.gift-card__card {
+  text-transform: uppercase;
+  position: absolute;
+  bottom: 20px;
+  right: 22px;
+  font-size: 33px;
+  font-weight: 100;
+  text-align: right;
+  letter-spacing: 1.5px;
+}
