--- a/src/shipping_confirmation.liquid
+++ b/src/shipping_confirmation.liquid
@@ -1,22 +1,25 @@
-{% if fulfillment.item_count == item_count %}
-  {% capture shipment_name %}Your order is{% endcapture %}
-{% elsif fulfillment.item_count > 1 %}
+{% if fulfillment.item_count == item_count %} 
+  {% capture email_title %}Your order is on the way{% endcapture %}
+  {% capture email_body %}Your order is on the way. Track your shipment to see the delivery status.{% endcapture %}
+{% elsif fulfillment.item_count > 1 %} 
   {% if fulfillment_status == 'fulfilled' %}
-    {% capture shipment_name %}The last items in your order are{% endcapture %}
+    {% capture email_title %}The last items in your order are on the way{% endcapture %}
+    {% capture email_body %}The last items in your order are on the way. Track your shipment to see the delivery status.{% endcapture %}
   {% else %}
-    {% capture shipment_name %}Some items in your order are{% endcapture %}
+    {% capture email_title %}Some items in your order are on the way{% endcapture %}
+    {% capture email_body %}Some items in your order are on the way. Track your shipment to see the delivery status.{% endcapture %}
   {% endif %}
-{% else %}
+{% else %} 
   {% if fulfillment_status == 'fulfilled' %}
-    {% capture shipment_name %}The last item in your order is{% endcapture %}
+    {% capture email_title %}The last item in your order is on the way{% endcapture %}
+    {% capture email_body %}The last item in your order is on the way. Track your shipment to see the delivery status.{% endcapture %}
   {% else %}
-    {% capture shipment_name %}One item in your order is{% endcapture %}
+    {% capture email_title %}One item in your order is on the way{% endcapture %}
+    {% capture email_body %}One item in your order is on the way. Track your shipment to see the delivery status.{% endcapture %}
   {% endif %}
 {% endif %}
 
-{% capture email_title %}{{ shipment_name }} on the way{% endcapture %}
-{% capture email_body %}{{ shipment_name }} on the way to you. Track your shipment to see the delivery status.{% endcapture %}
-{% capture email_emphasis %}Estimated delivery date: <strong>{{fulfillment.estimated_delivery_at | date: "%B %d, %Y"}}</strong>{% endcapture %}
+{% capture email_emphasis %}Estimated delivery date: <strong>{{fulfillment.estimated_delivery_at | date: "%B %-d, %Y"}}</strong>{% endcapture %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -24,9 +27,9 @@
   <title>{{ email_title }}</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width">
-  <!-- To be inlined -->
-  <link rel="stylesheet" type="text/css" href="assets/notifications/style.css">
+  <link rel="stylesheet" type="text/css" href="/assets/notifications/styles.css">
   <link rel="stylesheet" type="text/css" href="assets/notifications/inline-styles.css">
+
 </head>
 
   <body>
@@ -34,70 +37,163 @@
     <table class="body">
       <tr>
         <td>
-
-          <!-- @@include('header.liquid') -->
+        
+        <!-- @@include('header.liquid') -->
 
           <table class="row content">
-            <tr>
-              <td class="content__cell">
-                <center>
-                  <table class="container">
-                    <tr>
-                      <td>
+  <tr>
+    <td class="content__cell">
+      <center>
+        <table class="container">
+          <tr>
+            <td>
+              
+            <h2>{{ email_title }}</h2>
+            <p>{{ email_body }}</p>
+            {% if fulfillment.estimated_delivery_at %}
+              <p>{{ email_emphasis }}</p>
+            {% endif %}
+            {% if order_status_url %}
+              <table class="row actions">
+  <tr>
+    <td class="empty-line"> </td>
+  </tr>
+  <tr>
+    <td class="actions__cell">
+      <table class="button main-action-cell">
+        <tr>
+          <td class="button__cell"><a href="{{ order_status_url }}" class="button__text">View your order</a></td>
+        </tr>
+      </table>
+    
+    </td>
+  </tr>
+</table>
 
-                        <h2>{{ email_title }}</h2>
-                        <p>{{ email_body }}</p>
-                        {% if fulfillment.estimated_delivery_at %}
-                          <p>{{ email_emphasis }}</p>
-                        {% endif %}
-                        {% if order_status_url %}
-                          <table class="row actions">
-                            <tr>
-                              <td class="actions__cell">
-                                <table class="button main-action-cell">
-                                  <tr>
-                                    <td class="button__cell"><a href="{{ order_status_url }}" class="button__text">View your order</a></td>
-                                  </tr>
-                                </table>
-                                {% if shop.url %}
-                                  <table class="link secondary-action-cell">
-                                    <tr>
-                                      <td class="link__cell"><a href="{{ shop.url }}" class="link__text"><span class='or'>or</span> Visit our store</a></td>
-                                    </tr>
-                                  </table>
-                                {% endif %}
-                              </td>
-                            </tr>
-                          </table>
-                        {% else %}
-                          {% if shop.url %}
-                            <table class="row actions">
-                              <tr>
-                                <td class="actions__cell">
-                                  <table class="button main-action-cell">
-                                    <tr>
-                                      <td class="button__cell"><a href="{{ shop.url }}" class="button__text">Visit our store</a></td>
-                                    </tr>
-                                  </table>
-                                </td>
-                              </tr>
-                            </table>
-                          {% endif %}
-                        {% endif %}
-                      </td>
-                    </tr>
-                  </table>
-                </center>
-              </td>
+            {% else %}
+              {% if shop.url %}
+    <table class="row actions">
+      <tr>
+        <td class="actions__cell">
+          <table class="button main-action-cell">
+            <tr>
+              <td class="button__cell"><a href="{{ shop.url }}" class="button__text">Visit our store</a></td>
             </tr>
           </table>
+        </td>
+      </tr>
+    </table>
+{% endif %}
 
-          <!-- @@include('shipment-items.liquid') -->
+            {% endif %}
+            {% if fulfillment.tracking_numbers.size > 0 %}
+  <p class="disclaimer__subtext">
+    <br/>
+    {% if fulfillment.tracking_numbers.size == 1 and fulfillment.tracking_company and fulfillment.tracking_url %}
+      {{ fulfillment.tracking_company }} tracking number: <a href="{{ fulfillment.tracking_url }}">{{ fulfillment.tracking_numbers.first }}</a>
+    {% elsif fulfillment.tracking_numbers.size == 1 %}
+      Tracking number: {{ fulfillment.tracking_numbers.first }}
+    {% else %}
+      Tracking numbers:<br />
+      {% for tracking_number in fulfillment.tracking_numbers %}
+        {{ tracking_number }}<br />
+      {% endfor %}
+    {% endif %}
+  </p>
+{% endif %}
 
-          <!-- @@include('footer.liquid') -->
+
+            </td>
+          </tr>
+        </table>
+      </center>
+    </td>
+  </tr>
+</table>
+
+          <table class="row section">
+  <tr>
+    <td class="section__cell">
+      <center>
+        <table class="container">
+          <tr>
+            <td>
+              <h3>Items in this shipment</h3>
+            </td>
+          </tr>
+        </table>
+        <table class="container">
+          <tr>
+            <td>
+              
+            
+<table class="row">
+  {% for line in fulfillment.fulfillment_line_items %}
+  <tr class="order-list__item">
+    <td class="order-list__item__cell">
+      <table>
+        <td>
+          {% if line.line_item.image %}
+            <img src="{{ line.line_item | img_url: 'compact_cropped' }}" align="left" width="60" height="60" class="order-list__product-image"/>
+          {% endif %}
+        </td>
+        <td class="order-list__product-description-cell">
+          {% if line.line_item.product.title %}
+            {% assign line_title = line.line_item.product.title %}
+          {% else %}
+            {% assign line_title = line.line_item.title %}
+          {% endif %}
+
+          {% if line.quantity < line.line_item.quantity %}
+            {% capture line_display %} {{ line.quantity }} of {{ line.line_item.quantity }} {% endcapture %}
+          {% else %}
+            {% assign line_display = line.line_item.quantity  %}
+          {% endif %}
+
+          <span class="order-list__item-title">{{ line_title }} × {{ line_display }}</span><br/>
+
+          {% if line.line_item.variant.title != 'Default Title' %}
+            <span class="order-list__item-variant">{{ line.line_item.variant.title }}</span><br/>
+          {% endif %}
+
+            {% if line.line_item.refunded_quantity > 0 %}
+              <span class="order-list__item-refunded">Refunded</span>
+            {% endif %}
+
+          {% if line.line_item.discount_allocations %}
+            {% for discount_allocation in line.line_item.discount_allocations %}
+              {% if discount_allocation.discount_application.target_selection != 'all' %}
+                <span class="order-list__item-discount-allocation">
+                  <img src="{{ 'notifications/discounttag.png' | shopify_asset_url }}" width="18" height="18" class="discount-tag-icon" />
+                  <span>
+                    {{ discount_allocation.discount_application.title | upcase }}
+                    (-{{ discount_allocation.amount | money }})
+                  </span>
+                </span>
+              {% endif %}
+            {% endfor %}
+          {% endif %}
+        </td>
+      </table>
+    </td>
+  </tr>{% endfor %}
+</table>
+
+
+            </td>
+          </tr>
+        </table>
+      </center>
+    </td>
+  </tr>
+</table>
+        <!-- @@include('footer.liquid') -->
+
+         
 
         </td>
       </tr>
     </table>
   </body>
 </html>
+
